golangci-lint: Add more linters (currently without issues)
Signed-off-by: Lucas Bremgartner <lucas.bremgartner@futurfusion.io>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,11 +1,15 @@
 version: "2"
 linters:
   enable:
+    - bodyclose
     - errcheck
     - godot
+    - govet
     - ineffassign
     - misspell
+    - nakedret
     - staticcheck
+    - testifylint
     - unused
     - whitespace
   exclusions:
