--- a/.golangci.yml
+++ b/.golangci.yml
@@ -9,6 +9,7 @@ linters:
     - misspell
     - nakedret
     - prealloc
+    - revive
     - staticcheck
     - testifylint
     - thelper
@@ -16,6 +17,34 @@ linters:
     - unparam
     - unused
     - whitespace
+  settings:
+    revive:
+      rules:
+        - name: bare-return
+        - name: bool-literal-in-expr
+        - name: comment-spacings
+        - name: datarace
+        - name: deep-exit
+        - name: defer
+        - name: duplicated-imports
+        - name: empty-block
+        - name: empty-lines
+        - name: error-naming
+        - name: error-return
+        - name: exported
+          arguments:
+            - "check-private-receivers"
+            - "disable-stuttering-check"
+        - name: modifies-value-receiver
+        - name: range-val-address
+        - name: range-val-in-closure
+        - name: receiver-naming
+        - name: redefines-builtin-id
+        - name: redundant-import-alias
+        - name: struct-tag
+        - name: use-any
+        - name: useless-break
+        - name: var-declaration
   exclusions:
     generated: lax
     presets:
