--- a/.golangci.yml
+++ b/.golangci.yml
@@ -27,6 +27,7 @@ linters:
         - name: deep-exit
         - name: defer
         - name: duplicated-imports
+        - name: early-return
         - name: empty-block
         - name: empty-lines
         - name: error-naming
