golangci-lint: Add import-shadowing revive rule (disabled)
Signed-off-by: Lucas Bremgartner <lucas.bremgartner@futurfusion.io>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -36,6 +36,8 @@ linters:
           arguments:
             - "check-private-receivers"
             - "disable-stuttering-check"
+        - name: import-shadowing
+          disabled: true # As of now, this triggers on too many cases.
         - name: indent-error-flow
         - name: modifies-value-receiver
         - name: range-val-address
