golangci-lint: Add var-naming revive rule
Signed-off-by: Lucas Bremgartner <lucas.bremgartner@futurfusion.io>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -50,6 +50,11 @@ linters:
         - name: use-any
         - name: useless-break
         - name: var-declaration
+        - name: var-naming
+          arguments:
+            - []
+            - []
+            - - skip-package-name-checks: true
   exclusions:
     generated: lax
     presets:
@@ -65,6 +70,9 @@ linters:
       - linters:
           - staticcheck
         text: "ST1005:"
+      - linters:
+          - revive
+        text: "testAcc"
 formatters:
   enable:
     - gci
