--- a/generate-datasources.yaml
+++ b/generate-datasources.yaml
@@ -42,6 +42,7 @@ network:
     See Incus network [configuration reference](https://linuxcontainers.org/incus/docs/main/explanation/networks/) for more details.
   package-name: network
   incus-get-method: GetNetwork
+  has-target: true
   has-locations: true
   extra-attributes:
     - name: type
@@ -157,6 +158,7 @@ network_forward:
   package-name: network
   parent: network
   incus-get-method: GetNetworkForward
+  has-target: true
   has-no-status: true
   has-location: true
   extra-attributes:
@@ -303,6 +305,7 @@ storage_bucket:
   package-name: storage
   parent: storage_pool
   incus-get-method: GetStoragePoolBucket
+  has-target: true
   has-no-status: true
   has-location: true
   extra-attributes:
@@ -319,6 +322,7 @@ storage_pool:
   package-name: storage
   incus-get-method: GetStoragePool
   has-no-project: true
+  has-target: true
   extra-attributes:
     - name: driver
       type: string
@@ -333,6 +337,7 @@ storage_volume:
   package-name: storage
   parent: storage_pool
   incus-get-method: GetStoragePoolVolume
+  has-target: true
   has-no-status: true
   has-location: true
   extra-id-attribute:
